Fix alignment of the verticla filter

--- a/goldenMeatPortfolio/home/static/css/style.css
+++ b/goldenMeatPortfolio/home/static/css/style.css
@@ -1566,7 +1566,7 @@ section {
 }
 
 .col-lg-3.vertical-filter {
-  padding-top: 60px;
+  padding-top: 0px;
   margin-left: -30%;
 }
 
